--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,8 +1,8 @@
 # Visit https://github.com/lowlighter/metrics#-documentation for full reference
 name: Metrics
 on:
-  # Schedule updates (every 5 mins)
-  schedule: [{cron: "0 0 1/5 * *"}]
+  # Schedule updates (each hour)
+  schedule: [{cron: "0 * * * *"}]
   # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
   push: {branches: ["master", "main"]}
@@ -27,7 +27,7 @@ jobs:
           # Options
           user: hiperesp
           template: terminal
-          base: header, activity, community, repositories, metadata
+          base: header, activity, repositories, metadata
           config_timezone: America/Sao_Paulo
           plugin_languages: yes
           plugin_languages_analysis_timeout: 15
@@ -41,6 +41,10 @@ jobs:
           plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
+          plugin_repositories: yes
+          plugin_repositories_order: featured, pinned, starred, random
+          plugin_repositories_pinned: 6
+          plugin_repositories_starred: 3
           plugin_stargazers: yes
           plugin_stargazers_charts_type: classic
           plugin_stargazers_days: 9999
